# hack-2023-lct-guns

./: README.md  compose.dev.yaml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
api/src/: crud.py  database.py  main.py  models.py  schemas.py
api/src/migrations/: env.py
api/src/migrations/versions/: 0fb99da0fbc7_initial_schema.py  148e581b9765_add_active_for_sources.py  43bdf4b9430c_cascade_delete_inference_hits.py  5bbdd3bf399c_add_track_id.py  a9018dfe0447_add_private_url_to_camera_sources.py  dbb1f3f3cdc5_add_soft_deletion_for_sources.py  ee13a6ec7586_add_confidence.py
api/src/ml/: guns.py
api/src/ml/train9/: args.yaml  results.csv
api/src/ml/train9/weights/best_openvino_model/: best.xml  metadata.yaml
caddy/: Caddyfile
ml/: train_models.py
mmtx/: mediamtx.yml
ui/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  Layout.tsx  state.ts
ui/src/api/: index.ts
ui/src/lib/: SourceRow.ts  utils.ts
ui/src/pages/: FeedPage.tsx  SourcesPage.tsx
